--- a/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
+++ b/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Venus.Core.Domain\Venus.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="VenusDtos\" />
+    <Folder Include="Results\" />
+  </ItemGroup>
+
 </Project>
