--- a/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
+++ b/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Core\Venus.Core.Application\Venus.Core.Application.csproj" />
+    <ProjectReference Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\Venus.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
 
