--- a/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
+++ b/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Results\" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
   </ItemGroup>
 
 </Project>
