--- a/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
+++ b/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
@@ -5,6 +5,20 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+
+    <!-- 📦 NuGet bilgileri -->
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IncludeRazorContentInPack>true</IncludeRazorContentInPack>
+    <IncludeContentInPack>true</IncludeContentInPack>
+
+    <!-- Paket metadata -->
+    <PackageId>Venus.Presentation.Client.Core</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Gökhan Kesler</Authors>
+    <Company>VenusLabs</Company>
+    <Description>Venus dinamik sayfa yönetim sistemi.</Description>
+    <RepositoryUrl>https://github.com/kullaniciadi/Venus</RepositoryUrl>
+    <PackageTags>Razor;UI;Venus;Components</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
