--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -21,6 +21,12 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
+      - name: Remove default NuGet source (v2)
+        run: dotnet nuget remove source nuget.org || true
+
+      - name: Add NuGet v3 source explicitly
+        run: dotnet nuget add source https://api.nuget.org/v3/index.json --name nuget.org
+
       - name: Restore & Build
         run: |
           dotnet restore
@@ -30,4 +36,7 @@ jobs:
         run: dotnet pack --configuration Release --output ./nupkg
 
       - name: Push to NuGet
-        run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.VENUS_PRESENTATION_CLIENT_CORE }} --source https://api.nuget.org/v3/index.json
+        run: dotnet nuget push ./nupkg/*.nupkg \
+          --api-key ${{ secrets.VENUS_PRESENTATION_CLIENT_CORE }} \
+          --source https://api.nuget.org/v3/index.json \
+          --skip-duplicate
