--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -36,7 +36,5 @@ jobs:
         run: dotnet pack --configuration Release --output ./nupkg
 
       - name: Push to NuGet
-        run: dotnet nuget push ./nupkg/*.nupkg \
-          --api-key ${{ secrets.VENUS_PRESENTATION_CLIENT_CORE }} \
-          --source https://api.nuget.org/v3/index.json \
-          --skip-duplicate
+        run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.VENUS_PRESENTATION_CLIENT_CORE }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+
