--- a/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
+++ b/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
@@ -27,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Core\Venus.Core.Application\Venus.Core.Application.csproj" />
-    <ProjectReference Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\Venus.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\..\Core\Venus.Core.Application\Venus.Core.Application.csproj" Pack="true" PackagePath="lib\netstandard2.1\"  />
+    <ProjectReference Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\Venus.Infrastructure.Persistence.csproj" Pack="true" PackagePath="lib\netstandard2.1\"   />
   </ItemGroup>
 
   <ItemGroup>
