--- a/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
+++ b/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
@@ -13,7 +13,7 @@
 
     <!-- Paket metadata -->
     <PackageId>Venus.Presentation.Client.Core</PackageId>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <Authors>Gökhan Kesler</Authors>
     <Company>VenusLabs</Company>
     <Description>Venus dinamik sayfa yönetim sistemi.</Description>
@@ -27,10 +27,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Core\Venus.Core.Application\Venus.Core.Application.csproj" Pack="true" PackagePath="lib\netstandard2.1\"  />
-    <ProjectReference Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\Venus.Infrastructure.Persistence.csproj" Pack="true" PackagePath="lib\netstandard2.1\"   />
+    <ProjectReference Include="..\..\..\..\Core\Venus.Core.Application\Venus.Core.Application.csproj" />
+    <ProjectReference Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\Venus.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
+  <!-- 📦 NuGet paketine DLL gömme -->
+  <ItemGroup>
+    <None Include="..\..\..\..\Core\Venus.Core.Application\bin\Release\net9.0\Venus.Core.Application.dll"
+          Pack="true"
+          PackagePath="lib/net9.0/" />
+    <None Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\bin\Release\net9.0\Venus.Infrastructure.Persistence.dll"
+          Pack="true"
+          PackagePath="lib/net9.0/" />
+  </ItemGroup>
+  
   <ItemGroup>
     <Folder Include="Controllers\Base\" />
   </ItemGroup>
