--- a/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
+++ b/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
@@ -13,7 +13,7 @@
 
     <!-- Paket metadata -->
     <PackageId>Venus.Presentation.Client.Core</PackageId>
-    <Version>1.0.6</Version>
+    <Version>1.0.7</Version>
     <Authors>Gökhan Kesler</Authors>
     <Company>VenusLabs</Company>
     <Description>Venus dinamik sayfa yönetim sistemi.</Description>
@@ -31,17 +31,13 @@
     <ProjectReference Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\Venus.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
-  <!-- 📦 NuGet paketine DLL gömme -->
   <ItemGroup>
-    <None Include="..\..\..\..\Core\Venus.Core.Application\bin\Release\net9.0\Venus.Core.Application.dll"
-          Pack="true"
-          PackagePath="lib/net8.0/" />
-    <None Include="..\..\..\..\Core\Venus.Core.Domain\bin\Release\net9.0\Venus.Core.Domain.dll"
-          Pack="true"
-          PackagePath="lib/net8.0/" />
-    <None Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\bin\Release\net9.0\Venus.Infrastructure.Persistence.dll"
-          Pack="true"
-          PackagePath="lib/net8.0/" />
+    <None Include="...\bin\Release\net8.0\Venus.Core.Application.dll"
+          Pack="true" PackagePath="lib/net8.0/" />
+    <None Include="...\bin\Release\net8.0\Venus.Infrastructure.Persistence.dll"
+          Pack="true" PackagePath="lib/net8.0/" />
+    <None Include="...\bin\Release\net8.0\Venus.Core.Domain.dll"
+          Pack="true" PackagePath="lib/net8.0/" />
   </ItemGroup>
   
   <ItemGroup>
