--- a/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
+++ b/Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core/Venus.Presentation.Client.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
@@ -13,7 +13,7 @@
 
     <!-- Paket metadata -->
     <PackageId>Venus.Presentation.Client.Core</PackageId>
-    <Version>1.0.7</Version>
+    <Version>1.0.8</Version>
     <Authors>Gökhan Kesler</Authors>
     <Company>VenusLabs</Company>
     <Description>Venus dinamik sayfa yönetim sistemi.</Description>
@@ -32,12 +32,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="...\bin\Release\net8.0\Venus.Core.Application.dll"
+    <None Include="..\..\..\..\Core\Venus.Core.Domain\bin\Release\net8.0\Venus.Core.Domain.dll"
           Pack="true" PackagePath="lib/net8.0/" />
-    <None Include="...\bin\Release\net8.0\Venus.Infrastructure.Persistence.dll"
-          Pack="true" PackagePath="lib/net8.0/" />
-    <None Include="...\bin\Release\net8.0\Venus.Core.Domain.dll"
-          Pack="true" PackagePath="lib/net8.0/" />
+    <None Include="..\..\..\..\Core\Venus.Core.Application\bin\Release\net8.0\Venus.Core.Application.dll"
+         Pack="true" PackagePath="lib/net8.0/" />
+    <None Include="..\..\..\..\Infrastructure\Venus.Infrastructure.Persistence\bin\Release\net8.0\Venus.Infrastructure.Persistence.dll"
+         Pack="true" PackagePath="lib/net8.0/" />
   </ItemGroup>
   
   <ItemGroup>
