--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -32,6 +32,12 @@ jobs:
           dotnet restore
           dotnet build --configuration Release
 
+      - name: Pack all projects
+        run: |
+          dotnet pack Venus/src/Core/Venus.Core.Domain --configuration Release --output ./nupkg
+          dotnet pack Venus/src/Core/Venus.Core.Application --configuration Release --output ./nupkg
+          dotnet pack Venus/src/Infrastructure/Venus.Infrastructure.Persistence --configuration Release --output ./nupkg
+
       - name: Pack
         run: dotnet pack --configuration Release --output ./nupkg
     
