--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core
+        working-directory: .
 
     steps:
       - name: Checkout repo
@@ -30,7 +30,7 @@ jobs:
       - name: Restore & Build
         run: |
           dotnet restore
-          dotnet build --configuration Release
+          dotnet build Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core --configuration Release
 
       - name: Pack all projects
         run: |
@@ -39,7 +39,7 @@ jobs:
           dotnet pack Venus/src/Infrastructure/Venus.Infrastructure.Persistence --configuration Release --output ./nupkg
 
       - name: Pack
-        run: dotnet pack --configuration Release --output ./nupkg
+        run: dotnet pack Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core --configuration Release --output ./nupkg
     
       - name: Push to NuGet
         run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.VENUS_PRESENTATION_CLIENT_CORE }} --source https://api.nuget.org/v3/index.json --skip-duplicate
