--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .
 
     steps:
       - name: Checkout repo
@@ -26,17 +29,17 @@ jobs:
 
       - name: Restore & Build
         run: |
-          dotnet restore
-          dotnet build --configuration Release
+          dotnet restore Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core
+          dotnet build Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core --configuration Release
 
-      - name: Pack Domain, Application, Persistence
+      - name: Pack all projects
         run: |
           dotnet pack Venus/src/Core/Venus.Core.Domain --configuration Release --output ./nupkg
           dotnet pack Venus/src/Core/Venus.Core.Application --configuration Release --output ./nupkg
           dotnet pack Venus/src/Infrastructure/Venus.Infrastructure.Persistence --configuration Release --output ./nupkg
 
-      - name: Pack Client.Core
+      - name: Pack
         run: dotnet pack Venus/src/Presentation/Web/Client/Venus.Presentation.Client.Core --configuration Release --output ./nupkg
-
+    
       - name: Push to NuGet
         run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.VENUS_PRESENTATION_CLIENT_CORE }} --source https://api.nuget.org/v3/index.json --skip-duplicate
