--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/Venus.Presentation.Web.Cms.Server/appsettings.json
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/Venus.Presentation.Web.Cms.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "VenusConnection": "Server=DESKTOP-JMDTST6;Database=VenusSystem;TrustServerCertificate=True;User Id=sa;Password=123456789;"
+  },
   "AllowedHosts": "*"
 }
