--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/package.json
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
+    "flowbite": "^3.1.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.5",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "yup": "^1.7.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
