--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/package.json
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "flowbite": "^3.1.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
