--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/Venus.Presentation.Web.Cms.Server/appsettings.json
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/Venus.Presentation.Web.Cms.Server/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "domain": "localhost",
   "ConnectionStrings": {
     "VenusConnection": "Server=DESKTOP-JMDTST6;Database=VenusSystem;TrustServerCertificate=True;User Id=sa;Password=123456789;"
   },
