--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/Venus.Presentation.Web.Cms.Server/appsettings.json
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/Venus.Presentation.Web.Cms.Server/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "domain": "localhost",
+  "SymmetricSecurityKey": "venus-cms-auth-secret-key-long-1453!",
   "ConnectionStrings": {
     "VenusConnection": "Server=DESKTOP-JMDTST6;Database=VenusSystem;TrustServerCertificate=True;User Id=sa;Password=123456789;"
   },
