--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/tsconfig.app.json
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/tsconfig.app.json
@@ -21,7 +21,7 @@
     "strictPropertyInitialization":false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
+    "erasableSyntaxOnly": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
