--- a/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
+++ b/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
@@ -16,9 +16,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
+    <PackageReference Include="Riok.Mapperly" Version="4.3.1-next.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\" />
     <Folder Include="Services\Base\" />
   </ItemGroup>
 
