Cms language manager

--- a/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
+++ b/Venus/src/Core/Venus.Core.Application/Venus.Core.Application.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\Cms\PageManagers\" />
     <Folder Include="Services\Base\" />
   </ItemGroup>
 
